--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack Webdeveloper Bachelor Degree  
+  uni: UniCA
+  year: September, 2018 &mdash; July, 2021
   # awards:
-  # summary:
+  # summary: HTML, CSS, JS, Python, Vuejs, React
