Updated resume data

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Bachelor Degree  
+- degree: Full Stack Web Developer Course
   uni: UniCA
   year: September, 2018 &mdash; July, 2021
   # awards:
-  # summary: HTML, CSS, JS, Python, Vuejs, React
+  summary: HTML, CSS, JS, Python, Vuejs, React, Swift, Android
