--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -6,13 +6,8 @@
   summary: I only live to get radical.
 
 # Job Title
-- company: Conway Meats
+- company: Frontend Developer
   position: Web Developer
-  duration: May, 2014 &mdash; May, 2015
-  summary: Web developer for a restuarant meat provider.
+  duration: July, 2019 &mdash; Present
+  summary: Web developer for greener infomobility systems.
 
-# Supportocat
-- company: GitHub, Inc.
-  position: Supportocat, GitHub for Business
-  duration:  June 2016 &mdash; Present
-  summary: Provide world class support to customers on the GitHub for Business platform
