--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,16 +1,16 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
 
-# probot
-- project: probot
-  role: Contributor
-  duration: 2016 &mdash; Present
-  url: "https://github.com/probot/probot"
-  description: A framework for building GitHub Apps to automate and improve your workflow
+# GitHub
+- project: GitHub Learning Lab
+  role: Student
+  duration: 2021 &mdash; Present
+  url: "https://lab.github.com/"
+  description: Master every operation and phase of Git Versioning Control
 
-# GitHub Classroom
-- project: GitHub Classroom
-  role: Contributor
-  duration: 2015 &mdash; Present
-  url: "https://github.com/education/classroom"
-  description: GitHub Classroom automates repository creation and access control, making it easy for teachers to distribute starter code and collect assignments on GitHub.
+# General Assembly
+- project: General Assembly
+  role: Student
+  duration: 2015 &mdash; 2016
+  url: "https://generalassemb.ly/"
+  description: Frontend developer path.
