--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,8 +1,7 @@
 # Interests
 - description: Travel
-- description: Animated cartoons involving restuarants and burgers
+- description: Reading and Writing
 - description: Amusement parks
 - description: Open Source
-- description: Empowering underrepresented groups in tech through education and free events.
-- description: French Horn
-
+- description: Sustainability
+- description: Motorbikes
