--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -12,7 +12,7 @@
   description: Ability to build robust backend of websites and applications, making use of Restful API.
 
 - skill: Versioning Control
-  description: clear understanding of how Git works, ability to work on a same big project with other developers, handling pull requests, conflicts and deployment phase.
+  description: Clear understanding of how Git works, ability to work on a same big project with other developers, handling pull requests, conflicts and deployment phase.
 
 - skill: Communication
   description: Friendly communicator able to actively listen and share ideas with confidence and respect. Have empathy for other people's feelings and emotions. Able to clearly communicate in a professional manner with clients and collegues of all levels.
