--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,13 +1,25 @@
 # Jobs
 # Surftocat
 - company: Self Employed
-  position: Surftocat
+  position: Flucser
   duration: Life
   summary: I only live to get radical.
 
 # Job Title
-- company: Frontend Developer
+- company: GreenShare
   position: Web Developer
   duration: July, 2019 &mdash; Present
   summary: Web developer for greener infomobility systems.
+
+# Job Title
+- company: Nuova Scuola Internazionale
+  position: ICT Teacher
+  duration: October, 2018 &mdash; March, 2019
+  summary: Teaching for ECDL certificate and web editing.
+
+# Job Title
+- company: DAMG | Discovering Art Music Group
+  position: Web Designer
+  duration: May, 2015 &mdash; September, 2016
+  summary: Teaching for ECDL certificate and web editing.
 
