--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -11,3 +11,8 @@
   duration: July, 2019 &mdash; Present
   summary: Web developer for greener infomobility systems.
 
+# Job Title
+- company: DAMG | Discovering Art Music Group
+  position: Web Designer
+  duration: May, 2015 &mdash; September, 2016
+  summary: Website development using Wordpress platform.
