--- a/_data/education.yml
+++ b/_data/education.yml
@@ -17,4 +17,4 @@
 - degree: Political science and international relations
   uni: Sapienza, Rome
   year: 2005 &mdash; 2009
-  summary: International political science
+  summary: Law, Geoeconomy, Geopolitcs
