--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -5,19 +5,31 @@
   role: Open Source Contributor
   year: 2021
   url: https://helpafamily.margaritahumanitarian.org/
-  summary: Contribute to develop the source code of the association web site.
+  summary: Contributing to develop the source code of the association web site.
 
 - organization: Hub/Spoke
-  role: Contributor
+  role: Partecipant
   year: 2019
   url: https://www.facebook.com/events/2116414781800037/
   summary: Hackathon for women standing up against stereotypes. Built an app regarding this issue in 3 days.
+
+- organization: Skills matters
+  role: Partecipant
+  year: 2015 &mdash; 2017
+  url: https://skillsmatter.com/
+  summary: Actively partecipating to coding workshops and meetups.
+
+- organization: Founders and Coders
+  role: Partecipant
+  year: 2015 &mdash; 2017
+  url: foundersandcoders.com
+  summary: Actively partecipating to coding workshops and meetups.
 
 - organization: Refugee Radio
   role: Volunteer
   year: 2013 &mdash; 2014
   url: http://connecthome.atlantaga.gov/
-  summary: Supporting refugees, asylum seekers and vulnerable migrants.
+  summary: Partecipating to various activities for supporting refugees, asylum seekers and vulnerable migrants.
 
 - organization: Oxfam, London
   role: Volunteer
