--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,18 +1,18 @@
 # Course
-- degree: Mobile App Developer
+- degree: Mobile App Development
   uni: Evolvere
   year: October, 2018 &mdash; December, 2019
-  summary: Object Oriented Programming, Java, Android, Swift, Software Development 
+  summary: Object Oriented Programming, Software Development, Java, Android, Swift 
 
 - degree: Backend Development
   uni: Abacons
   year: May, 2018 &mdash; July, 2018
-  summary: Data manipulation, Testing, PHP
+  summary: PHP, Testing
 
 - degree: Frontend Development
   uni: General Assembly
   year: February, 2015 &mdash; April, 2015
-  summary: HTML, CSS, Javascript
+  summary: HTML, CSS, Javascript, Bootstrap, jQuery
 
 - degree: Political science and international relations
   uni: Sapienza, Rome
