--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,5 +1,5 @@
 # Interests
-- description: Travel
+- description: Traveling
 - description: Reading and Writing
 - description: Open Source
 - description: Sustainability
