--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ sass:
 
 # Resume settings
 resume_avatar:                  "true"
-resume_name:                    "Web Developer"
-resume_title:                   "Professional Frontend Developer"
+resume_name:                    "Sabrina Cuccureddu"
+resume_title:                   "Frontend Web Developer"
 resume_contact_email:           "sa.cux.dev@gmail.com.com"
 resume_contact_telephone:       "+39 3922641302"
 resume_contact_address:         "Cagliari, Sardinia"
@@ -34,6 +34,7 @@ resume_section_skills:          true
 # resume_section_links:           true
 resume_section_interests:       true
 resume_section_associations:    true
+resume_section_books:    true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
