--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -7,7 +7,7 @@
 
 # Job Title
 - company: GreenShare
-  position: Web Developer
+  position: Frontend Web Developer
   duration: July, 2019 &mdash; Present
   summary: Web developer for greener infomobility systems.
 
@@ -20,6 +20,6 @@
 # Job Title
 - company: DAMG | Discovering Art Music Group
   position: Web Designer
-  duration: May, 2015 &mdash; September, 2016
+  duration: May, 2015 &mdash; October, 2016
   summary: Website developer using the Wordpress platform.
 
