--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -13,4 +13,4 @@
   role: Student
   duration: 2015 &mdash; Present
   url: "https://www.freecodecamp.org"
-  description: Fullstack developer path.
+  description: Practicing
